# liblog-ndk

./: .gitignore  Android.bp  README.md  logger_write.cpp
android-base/: README.md
cmake/: CMakeLists.txt  CMakeListsConan.txt  armv8.profile  build.profile  build.sh  conanfile.txt
tests/: device_test_config.xml
